eng/development/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: kubernetes-auth0-concept-authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
        app: kubernetes-auth0-concept-authentication
  template:
    metadata:
      labels:
        app: kubernetes-auth0-concept-authentication 
    spec:
      containers:
        - name: kubernetes-auth0-concept-authentication 
          image: brandonkorouscontainers.azurecr.io/kubernetes-auth0-concept-authentication 
          ports:
          - containerPort: 80
