eng/development/service.yml
apiVersion: v1
kind: Service
metadata:
    name: kubernetes-auth0-concept-authentication-service
    namespace: development
    labels:
      app: kubernetes-auth0-concept-authentication
spec:
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort:  80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
    selector:
        app: kubernetes-auth0-concept-authentication
