eng/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wize-ingress-development-clients-kubernetes-auth0-concept-authentication
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-kubernetes-auth0-concept-authentication
    #ingress.kubernetes.io/ssl-redirect: "true"
    #kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - authentication.samples.brandonkorous.com
    secretName: wize-ingress-kubernetes-auth0-concept-authentication-certificate
  rules:
  - host: authentication.samples.brandonkorous.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: kubernetes-auth0-concept-authentication-service
             port: 
               number: 443
